[package]
name = "xkcd"
version = "0.2.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "Interface for the XKCD web API"
repository = "https://github.com/indiv0/xkcd-rs"
documentation = "https://indiv0.github.io/xkcd-rs/xkcd/"
readme = "README.md"
keywords = [
    "comic",
    "xkcd",
    "API",
    "web",
    "library",
]
license = "MIT/Apache-2.0"
include = [
    "CHANGELOG.md",
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs",
]

[dependencies]
log = "0.3.6"
rand = "0.3.14"
serde = "0.9.5"
serde_json = "0.9.4"
serde_derive = "0.9.5"
url_serde = "0.1"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.hyper]
optional = true
version = "0.9.5"

[dependencies.url]
features = ["serde"]
version = "1.1.1"

[features]
default = ["hyper"]
nightly-testing = ["clippy"]
